# SPDX-FileCopyrightText: 2022-2024 Rice University
# SPDX-FileCopyrightText: 2024 Contributors to the HPCToolkit Project
#
# SPDX-License-Identifier: BSD-3-Clause

# Utilities for running tests and such
subdir('lib')

# Data for running tests
subdir('data')

# Tests themselves
subdir('hpcrun')
subdir('hpcstruct')
subdir('hpcprof')
subdir('end2end')
